--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -33,14 +33,58 @@
 
     <% elsif @location.present? and @location.parent_id == nil %>
 
-    <div id="welcome-locations">
+    <div id="welcome">
       <div class="container">
         <div class="row">
           <div class="col-xs-12 div1">
               <%=raw @location.description %>
           </div>
           <div class="col-xs-12">
-            <%= link_to 'Start Your Journey', '#contact', :class=>"btn btn-default btn-custom" %>
+            <a type="button" class="btn btn-default btn-custom" data-toggle="modal" data-target="#myModal">Start Your Journey</a>
+            <!-- Modal -->
+            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  </div>
+                  <div class="modal-body">
+                    <div class="row">
+                      <div class="col-xs-12">
+                        <div class="">
+                          <h1><%= copywriting('Contact title', {:phrase_type => 'string', :scope => 'Footer', :default => 'Let us tailor make your next journey' }) %></h1>
+                          <p><%= copywriting('Contact Text', {:phrase_type => 'text', :scope => 'Footer', :default => 'Whether you are a seasoned Africa traveller or going to Africa for the very first time, we would love to speak to you. Our first aim is to get to know you, what interests you have and to then match these with our tailormade collection of experiences, camps and lodges. It is always best to talk this over and get the ball rolling from there, so please do pick up the phone for an informal chat with us. We look forward to speaking with you and tailor making your next journey.' }) %></p>
+                        </div>
+                        <div class="contact-form">
+                          <h2>Fill in the form below and we'll get back to you asap</h2>
+                          <% @inquiry ||= ::Refinery::Inquiries::Inquiry.new %>
+                          <%= simple_form_for [refinery, :inquiries, @inquiry], :html => {:class => 'form-vertical'} do |f| %>
+                            <div class="col-xs-12 col-sm-6">
+                              <%= f.input :name, :wrapper => :bootstrap_12, :input_html => { :class => 'form-control' } %>
+                              <%= f.input :email, :wrapper => :bootstrap_12, :input_html => { :class => 'form-control' }%>
+                              <%= f.input :phone, :wrapper => :bootstrap_12, :input_html => { :class => 'form-control' } %>
+                            </div>
+                            <div class="col-xs-12 col-sm-6">
+                              <%= f.input :message, :wrapper => :bootstrap_12,:input_html  => {:rows=>6, :class => 'form-control' } %>
+                            </div>
+                            <div class="col-xs-12 col-sm-6">
+                              <img src="/assets/captcha.png" class="img-responsive captcha">
+                            </div>
+                            <div class="col-xs-12 col-sm-6">
+                              <%= f.input :captcha, :wrapper => :bootstrap_12, :input_html => { :class => 'form-control' } %>
+                            </div>
+                            <div class="col-xs-12">
+                              <%= f.submit 'Submit', :class=>"btn btn-default btn-custom", :data => {:disable_with => "Saving..."} %>
+                            </div>
+                          <% end %>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <%#= link_to 'Start Your Journey', '#contact', :class=>"btn btn-default btn-custom" %>
           </div>
         </div>
         <% child_locations = Refinery::Locations::Location.where(:parent_id => @location.id) %>
@@ -54,7 +98,7 @@
                 <% child_locations.each do |child| %>
                   <div class="slide">
                     <%= link_to refinery.locations_location_path(child)  do %>
-                      <%= image_fu child.cover_image, "110x110#c" if child.cover_image.present? %>
+                      <%= image_fu child.cover_image, "165x165#c" if child.cover_image.present? %>
                       <div class="name"><%= child.name %></div>
                     <% end %>
                   </div>
@@ -121,14 +165,58 @@
 
 
 
-    <div id="welcome-accommodation">
+    <div id="welcome">
       <div class="container">
         <div class="row">
           <div class="col-xs-12 div1">
               <%=raw @location.description %>
           </div>
           <div class="col-xs-12">
-            <%= link_to 'Start Your Journey', '#contact', :class=>"btn btn-default btn-custom" %>
+            <a type="button" class="btn btn-default btn-custom" data-toggle="modal" data-target="#myModal">Start Your Journey</a>
+            <!-- Modal -->
+            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  </div>
+                  <div class="modal-body">
+                    <div class="row">
+                      <div class="col-xs-12">
+                        <div class="">
+                          <h1><%= copywriting('Contact title', {:phrase_type => 'string', :scope => 'Footer', :default => 'Let us tailor make your next journey' }) %></h1>
+                          <p><%= copywriting('Contact Text', {:phrase_type => 'text', :scope => 'Footer', :default => 'Whether you are a seasoned Africa traveller or going to Africa for the very first time, we would love to speak to you. Our first aim is to get to know you, what interests you have and to then match these with our tailormade collection of experiences, camps and lodges. It is always best to talk this over and get the ball rolling from there, so please do pick up the phone for an informal chat with us. We look forward to speaking with you and tailor making your next journey.' }) %></p>
+                        </div>
+                        <div class="contact-form">
+                          <h2>Fill in the form below and we'll get back to you asap</h2>
+                          <% @inquiry ||= ::Refinery::Inquiries::Inquiry.new %>
+                          <%= simple_form_for [refinery, :inquiries, @inquiry], :html => {:class => 'form-vertical'} do |f| %>
+                            <div class="col-xs-12 col-sm-6">
+                              <%= f.input :name, :wrapper => :bootstrap_12, :input_html => { :class => 'form-control' } %>
+                              <%= f.input :email, :wrapper => :bootstrap_12, :input_html => { :class => 'form-control' }%>
+                              <%= f.input :phone, :wrapper => :bootstrap_12, :input_html => { :class => 'form-control' } %>
+                            </div>
+                            <div class="col-xs-12 col-sm-6">
+                              <%= f.input :message, :wrapper => :bootstrap_12,:input_html  => {:rows=>6, :class => 'form-control' } %>
+                            </div>
+                            <div class="col-xs-12 col-sm-6">
+                              <img src="/assets/captcha.png" class="img-responsive captcha">
+                            </div>
+                            <div class="col-xs-12 col-sm-6">
+                              <%= f.input :captcha, :wrapper => :bootstrap_12, :input_html => { :class => 'form-control' } %>
+                            </div>
+                            <div class="col-xs-12">
+                              <%= f.submit 'Submit', :class=>"btn btn-default btn-custom", :data => {:disable_with => "Saving..."} %>
+                            </div>
+                          <% end %>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <%#= link_to 'Start Your Journey', '#contact', :class=>"btn btn-default btn-custom" %>
           </div>
         </div>
       <% accommodations = Refinery::Accommodations::Accommodation.all %>
@@ -141,7 +229,7 @@
                 <% accommodations.each do |accommodation| %>
                   <div class="slide">
                       <%= link_to refinery.accommodations_accommodation_path(accommodation), :remote => true do %>
-                        <%= image_fu accommodation.cover_image, "110x110#c" if accommodation.cover_image.present? %>
+                        <%= image_fu accommodation.cover_image, "165x165#c" if accommodation.cover_image.present? %>
                         <div class="name"><%= accommodation.name %></div>
                     <% end %>
                   </div>
