--- a/app/views/refinery/blog/posts/_post.html.erb
+++ b/app/views/refinery/blog/posts/_post.html.erb
@@ -21,7 +21,7 @@
 
 <% content_for :right do %>
   <% if @post.locations.present? %>
-<div class="blog_locations">
+<div class="blog_rhs">
       <h2>Location</h2>
       <ul>
         <% @post.locations.each do |location| %>
