--- a/app/views/refinery/blog/shared/_posts.html.erb
+++ b/app/views/refinery/blog/shared/_posts.html.erb
@@ -1,6 +1,6 @@
 
 <% if @posts.many? %>
-<div class="blog_locations">
+<div class="blog_rhs">
   <h2><%= t('.other') %></h2>
   <ul id="blog_posts">
     <% @posts.each do |blog_post| %>
