--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -12,6 +12,13 @@
   <ul>
     <img src="/assets/logo-small.png" >
     <%= render :partial => "/refinery/menu" %>
+	<div id="sb-search" class="sb-search">
+		<form>
+			<input class="sb-search-input" placeholder="Search..." type="text" value="" name="search" id="search">
+			<input class="sb-search-submit" type="submit" value="">
+			<span class="sb-icon-search"></span>
+		</form>
+	</div>
   </ul>
 </nav>
 
