--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,8 +1,9 @@
 <% if @location.present? and @location.gallery.present? and @location.gallery.items.present? %>
   <div class="master-slider ms-skin-default hidden-xs" id="masterslider">
     <% @location.gallery.items.each do |item| %>
+    <div class="banner-overlay"><img class="img-responsive" src="/assets/banner-overlay.gif"></div>
       <div class="ms-slide slide-1" data-delay="6">
-        <div class="overlay"></div>
+        <div class="overlay"></div>        
         <%= image_fu(item.image, "1920x935#c") %>
         <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
           <h2>Discover</h2>
@@ -16,8 +17,9 @@
 <% elsif @accommodation.present? and @accommodation.gallery.present? and @accommodation.gallery.items.present? %>
   <div class="master-slider ms-skin-default hidden-xs" id="masterslider">
     <% @accommodation.gallery.items.each do |item| %>
+    <div class="banner-overlay"><img class="img-responsive" src="/assets/banner-overlay.gif"></div>
       <div class="ms-slide slide-1" data-delay="6">
-              <div class="overlay"></div>
+        <div class="overlay"></div>
         <%= image_fu(item.image, "1920x935#c") %>
         <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
           <h2>Visit</h2>
@@ -31,8 +33,9 @@
 <% elsif @activity.present? and @activity.gallery.present? and @activity.gallery.items.present? %>
   <div class="master-slider ms-skin-default hidden-xs" id="masterslider">
     <% @activity.gallery.items.each do |item| %>
+      <div class="banner-overlay"><img class="img-responsive" src="/assets/banner-overlay.gif"></div>
       <div class="ms-slide slide-1" data-delay="6">
-              <div class="overlay"></div>
+        <div class="overlay"></div>
         <%= image_fu(item.image, "1920x935#c") %>
         <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
           <h2>Experience</h2>
@@ -46,6 +49,16 @@
 <% elsif @post.present? and @post.banners.published.present? %>
   <div class="master-slider ms-skin-default hidden-xs" id="post_masterslider">
     <% @post.banners.published.each do |banner| %>
+      <div class="banner-overlay"><img class="img-responsive" src="/assets/banner-overlay.gif"></div>
+      <div class="ms-slide slide-1" data-delay="6">
+        <%= image_fu(banner.image, "1920x500#c") %>
+      </div>
+    <% end %>
+  </div>
+<% elsif @page.link_url.present? and @page.link_url == '/blog' and @page.present? and @page.banners.published.present? %>
+  <div class="master-slider ms-skin-default hidden-xs" id="post_masterslider">
+    <% @page.banners.published.each do |banner| %>
+      <div class="banner-overlay"><img class="img-responsive" src="/assets/banner-overlay-grey.gif"></div>
       <div class="ms-slide slide-1" data-delay="6">
         <%= image_fu(banner.image, "1920x500#c") %>
       </div>
@@ -54,6 +67,7 @@
 <% elsif @page.present? and @page.banners.published.present? %>
   <div class="master-slider ms-skin-default hidden-xs" id="masterslider">
       <% @page.banners.published.each do |banner| %>
+        <div class="banner-overlay"><img class="img-responsive" src="/assets/banner-overlay.gif"></div>
         <div class="ms-slide slide-1" data-delay="6">
           <div class="overlay"></div>
           <%= image_fu(banner.image, "1920x935#c") %>
