--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -179,6 +179,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
       h2 {font-size:20px; padding:50px 0; margin:0;}
       ul.amenities {padding:0; margin-bottom:0;
         li {display:inline-block; margin:0 10px 13px 0;}
+        li img { border-radius:50%; border:1px solid #e7e7e7;}
         li:nth-child(8) {margin-right:0;}
       }
       .btn-custom {background: #000; border-radius: 0; border: 0; height: 44px; width:200px; color: #fff; line-height:44px; padding:0;}
