--- a/app/assets/stylesheets/component.css
+++ b/app/assets/stylesheets/component.css
@@ -13,14 +13,15 @@
 .sb-search {
 	position: relative;
 	width: 0%;
-	min-width: 60px;
-	height: 60px;
-	float: right;
+	min-width: 25px;
+	height: 50px;
+	float: none;
 	overflow: hidden;
 	-webkit-transition: width 0.3s;
 	-moz-transition: width 0.3s;
 	transition: width 0.3s;
 	-webkit-backface-visibility: hidden;
+	margin:25px auto 0 auto;
 }
 
 .sb-search-input {
@@ -29,44 +30,51 @@
 	right: 0;
 	border: none;
 	outline: none;
-	background: #fff;
+	background: transparent;
 	width: 100%;
-	height: 60px;
-	margin: 0;
+	height: 25px;
+	line-height:25px;
+	margin:5px 30px 0 0;
 	z-index: 10;
-	padding: 20px 65px 20px 20px;
+	padding: 0 0 5px 40px;
 	font-family: inherit;
 	font-size: 20px;
-	color: #2c3e50;
+	color: #ffffff;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+	letter-spacing: 2px;
+    text-transform: uppercase;
+    border-bottom:1px solid #ffffff;
 }
 
 .sb-search-input::-webkit-input-placeholder {
-	color: #efb480;
+	color: rgba(255,255,255,0.5);
 }
 
 .sb-search-input:-moz-placeholder {
-	color: #efb480;
+	color: rgba(255,255,255,0.5);
 }
 
 .sb-search-input::-moz-placeholder {
-	color: #efb480;
+	color: rgba(255,255,255,0.5);
 }
 
 .sb-search-input:-ms-input-placeholder {
-	color: #efb480;
+	color: rgba(255,255,255,0.5);
 }
 
 .sb-icon-search,
 .sb-search-submit  {
-	width: 60px;
-	height: 60px;
+	width: 25px;
+	height: 50px;
 	display: block;
 	position: absolute;
 	right: 0;
 	top: 0;
 	padding: 0;
 	margin: 0;
-	line-height: 60px;
+	line-height: 25px;
 	text-align: center;
 	cursor: pointer;
 }
@@ -84,9 +92,9 @@
 
 .sb-icon-search {
 	color: #fff;
-	background: #e67e22;
+	background: transparent;
 	z-index: 90;
-	font-size: 22px;
+	font-size: 20px;
 	font-family: 'icomoon';
 	speak: none;
 	font-style: normal;
@@ -108,7 +116,7 @@
 
 .sb-search.sb-search-open .sb-icon-search,
 .no-js .sb-search .sb-icon-search {
-	background: #da6d0d;
+	background:transparent;
 	color: #fff;
 	z-index: 11;
 }
