--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -13,7 +13,7 @@
     <img src="/assets/logo-small.png" >
     <%= render :partial => "/refinery/menu" %>
 	<div id="sb-search" class="sb-search">
-		<form>
+		<form accept-charset="UTF-8" action="/locations" method="get">
 			<input class="sb-search-input" placeholder="Search..." type="text" value="" name="search" id="search">
 			<input class="sb-search-submit" type="submit" value="">
 			<span class="sb-icon-search"></span>
