--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -174,10 +174,13 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
 }
 
 .accommodation_item {
+  .banner-overlay {position:absolute; z-index:10;  bottom:0;
+    img { width:100%;}
+  }
   #masterslider2 .overlay {position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 5; background: url("../assets/overlay.png") repeat;}
   .accommodation {padding:50px 0 87px 0;
-    .accommodation-container { margin-top: -80px; background: #ffffff; position: relative;
-      h1 {margin:-70px 0 100px 0; color:#ffffff;}
+    .accommodation-container {
+      h1 {margin:0 0 50px 0;}
       h2 {font-size:20px; padding:50px 0; margin:0;}
       ul.amenities {padding:0; margin-bottom:0;
         li {display:inline-block; margin:0 10px 13px 0;}
